tests/baselines/reference/typesWithSpecializedConstructSignatures(strict=true).errors.txt
typesWithSpecializedConstructSignatures.ts(3,14): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedConstructSignatures.ts(4,31): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedConstructSignatures.ts(5,31): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedConstructSignatures.ts(11,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
typesWithSpecializedConstructSignatures.ts(30,5): error TS2454: Variable 'i' is used before being assigned.
typesWithSpecializedConstructSignatures.ts(31,5): error TS2454: Variable 'a' is used before being assigned.
typesWithSpecializedConstructSignatures.ts(33,5): error TS2454: Variable 'a' is used before being assigned.


==== typesWithSpecializedConstructSignatures.ts (7 errors) ====
    // basic uses of specialized signatures without errors
    
    class Base { foo: string }
                 ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class Derived1 extends Base { bar: string }
                                  ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    class Derived2 extends Base { baz: string }
                                  ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    
    class C {
        constructor(x: 'hi');
        constructor(x: 'bye');
        constructor(x: string);
        constructor(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            return x;
        }
    }
    var c = new C('a');
    
    interface I {
        new(x: 'hi'): Derived1;
        new(x: 'bye'): Derived2;
        new(x: string): Base;
    }
    var i: I;
    
    var a: {
        new(x: 'hi'): Derived1;
        new(x: 'bye'): Derived2;
        new(x: string): Base;
    };
    
    c = i;
        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    c = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    i = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    a = i;
    
    var r1 = new C('hi');
    var r2: Derived2 = new i('bye');
    var r3: Base = new a('hm');